tweaked colours, borders to integer px values to avoid flicker

--- a/NewsJunkie.nnwtheme/stylesheet.css
+++ b/NewsJunkie.nnwtheme/stylesheet.css
@@ -15,7 +15,8 @@ body {
 
 	/* bp */
 	background-color: #242527;
-	color: #f1f2f3;
+	/* color: #f1f2f3; */
+	color: antiquewhite;
 	/*
 	#06417c
 	#2188f0
@@ -24,21 +25,21 @@ body {
 	*/
 
 	font-family: 'Avenir Next Light', 'Avenir Next Ultra Light', 'Avenir', -apple-system;
+	/* font-family: 'Avenir Next Light', 'Avenir', -apple-system; */
 }
 
 /* text sizes */
-.small { font-size: 11px; }
+/* .small { font-size: 11px; }
 .medium { font-size: 14px; }
 .large { font-size: 16px; }
 .xlarge { font-size: 18px; }
-.xxlarge { font-size: 22px; }
+.xxlarge { font-size: 22px; } */
 
 a:link,
 a:hover,
 a:visited,
 a:active
  {
-	color:#2188f0;
 	color:#f1f2f3;
 	text-decoration:none;
 	font-weight: 100;
@@ -59,7 +60,7 @@ a:hover {
 
 header {
 	padding: 1em 0;
-	border-bottom: .5px solid darkgrey;
+	border-bottom:1px solid darkgrey;
 }
 
 header h1 {
@@ -72,17 +73,29 @@ header h1 {
 	font-family: 'Baskerville';
 }
 
-header h1 a:hover,
-header h2 a:hover {
-	color: #2188f0;
+header h1 a:link {
+	color: rgb(103, 103, 103);
+	/* color: antiquewhite; */
+	width: calc(100% - 48px - 1em);
+	font-family: 'Baskerville';
 }
+
+header h1 a:hover,
+header h2 a:hover{
+	color: rgb(120,120,120);
+	/* color: antiquewhite; */
+}
+/*
+header h2 a:hover {
+	color: antiquewhite;
+} */
 
 header h1 img {
 	margin-left: 2em;
 }
 
 header h2 {
-	font-size: 2em;
+	font-size: 1.8em;
 	font-weight: 100;
 	font-family: 'Avenir Next Regular';
 }
@@ -111,7 +124,7 @@ header a:visited {
 article {
 	padding: 2em 1em;
 	text-align: center !important;
-	border-bottom: .5px solid darkgrey;
+	border-bottom: 1px solid darkgrey;
 }
 
 p,
@@ -130,17 +143,27 @@ li {
 }
 
 li::marker {
-	color: #grey;
+	color: grey;
 	font-size: .1em;
 }
 
 blockquote {
-	border-left: .5px solid #a0cbf6;
+	border-left: 1px solid antiquewhite;
 	padding: .05em 1em .05em 2em;
 	margin: 2em 0;
 	font-style: italic;
 	font-weight: 100;
 	font-family: 'Avenir';
+}
+
+article h1,
+article h2,
+article h3,
+article h4,
+article h5,
+article h6 {
+	color: white;
+	text-align: left;
 }
 
 article img,
@@ -149,7 +172,7 @@ article figure img {
     max-width: calc(100% - 2em);
     min-width: calc(100% - 2em);
 	height: auto;
-    border: .5px solid darkgrey;
+    border: 1px solid darkgrey;
     padding: 5px;
     background-color: #1d1c1c;
 	overflow:hidden;
